Small bugfixes and testrun

--- a/01_1_TASK_1_sparkBasics.ipynb
+++ b/01_1_TASK_1_sparkBasics.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "outputs": [
     {
      "data": {
       "text/plain": "'http://AKDGPORT11191.mshome.net:4040'"
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,14 +35,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T11:53:58.650620Z",
-     "end_time": "2023-08-31T11:53:58.930943Z"
+     "end_time": "2024-09-10T09:37:54.106761400Z",
+     "start_time": "2024-09-10T09:37:42.246524800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -64,8 +64,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T11:54:00.158584Z",
-     "end_time": "2023-08-31T11:54:04.005565Z"
+     "end_time": "2024-09-10T09:38:24.272917200Z",
+     "start_time": "2024-09-10T09:37:54.106761400Z"
     }
    }
   },
@@ -77,13 +77,13 @@
     "> 2. Run the second cell to excecute the wordcount code\n",
     "> 3. Go to the SparkUI Url. How many jobs and stages are there and why?\n",
     "> 4. Copy/paste te wordcount code in a new cell.\n",
-    "> 5. Add lines of code after the reduceByKey to also save the counts of the first letter of the word. The wordCount and letterCount must be saved seperately.\n",
+    "> 5. In the copied cell you have to add lines of code after the reduceByKey to also save the counts of first letter of the word (this way we know how many times a word starting with \"a\" appears in the text. The wordCount and letterCount must be saved seperately. Run the cell with the new code.\n",
     "_Tip: Python key values are represented by Tuples. To change the (word, count) tuple to (letter,count) you kan use a map function with (wordTuple[0][0],wordTuple[1]). The first [0] represents the first element of the tuple (the key). The second [0] is the first letter of the key string)_\n",
     "> 6. Go to the SparkUI Url. How many jobs are created? Why? Inspect the DAG of the 2 last jobs.\n",
     "_The engine creates a job for every \"action\" in the code. For every action it will create a new excecution plan and all tranformations will be processed twice._\n",
     "> 7. Go to the Storage tab. Notice the tab is empty.\n",
     "> 8. To avoid Spark from excecuting all the steps twice, add wordCounts.cache() after the wordKv.reduceByKey.\n",
-    "> 9. Run the code again. How many jobs are created now? Why? Inspect the DAG of the 2 last jobs. What is the difference with the previous DAGS?\n",
+    "> 9. Run the code again. How many jobs are created now? Why? Inspect the DAG of the 2 last jobs. What is the difference with the previous DAGS? Compare the jobs by opening the DAGs in two different windows. What is the difference\n",
     "> 10. Go to the Storage tab. Notice the tab is not empty anymore. Inspect the storage tab.\n",
     "> _By enabling caching, the first job will store the intermediate result. The second job will reuse this result, which will prevent processing the same steps twice. With caching, you can choose between processing and memory. When enough memory is available you can greatly increase the performance of the jobs._\n",
     "> 11. Excecute sc.stop() to stop the Spark Server"
@@ -94,13 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#Add your code here"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-10T09:38:24.274007100Z",
+     "start_time": "2024-09-10T09:38:24.241385600Z"
+    }
    }
   },
   {
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "sc.stop()"
@@ -122,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T11:53:50.930369Z",
-     "end_time": "2023-08-31T11:53:51.373684Z"
+     "end_time": "2024-09-10T09:38:25.103829800Z",
+     "start_time": "2024-09-10T09:38:24.255191Z"
     }
    }
   }
