--- a/02_0_TASK_2_sparkSQL_SOLUTION.ipynb
+++ b/02_0_TASK_2_sparkSQL_SOLUTION.ipynb
@@ -6,15 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:19.991333700Z",
-     "start_time": "2024-09-03T12:08:04.220103Z"
+     "end_time": "2024-09-10T09:39:17.415865100Z",
+     "start_time": "2024-09-10T09:38:52.856653700Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x254fcd76810>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4042\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>SQLExcersice</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x213ccc7e950>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>SQLExcercise</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 1,
      "metadata": {},
@@ -26,7 +26,7 @@
     "from delta import configure_spark_with_delta_pip\n",
     "import ConnectionConfig as cc\n",
     "cc.setupEnvironment()\n",
-    "spark = cc.startLocalCluster(\"SQLExcersice\")\n",
+    "spark = cc.startLocalCluster(\"SQLExcercise\")\n",
     "spark.getActiveSession()"
    ]
   },
@@ -68,8 +68,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:26.104700700Z",
-     "start_time": "2024-09-03T12:08:19.976290900Z"
+     "end_time": "2024-09-10T09:39:23.903089700Z",
+     "start_time": "2024-09-10T09:39:17.398249900Z"
     }
    }
   },
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:26.136822400Z",
-     "start_time": "2024-09-03T12:08:26.109714300Z"
+     "end_time": "2024-09-10T09:39:23.914858200Z",
+     "start_time": "2024-09-10T09:39:23.904186700Z"
     }
    }
   },
@@ -131,8 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:26.215430300Z",
-     "start_time": "2024-09-03T12:08:26.123822300Z"
+     "end_time": "2024-09-10T09:39:23.976198500Z",
+     "start_time": "2024-09-10T09:39:23.915951400Z"
     }
    }
   },
@@ -170,8 +170,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:27.141502200Z",
-     "start_time": "2024-09-03T12:08:26.202902800Z"
+     "end_time": "2024-09-10T09:39:24.853720400Z",
+     "start_time": "2024-09-10T09:39:23.978350900Z"
     }
    }
   },
@@ -197,8 +197,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:27.911591400Z",
-     "start_time": "2024-09-03T12:08:27.114963300Z"
+     "end_time": "2024-09-10T09:39:25.581752900Z",
+     "start_time": "2024-09-10T09:39:24.856920200Z"
     }
    }
   },
@@ -236,8 +236,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:29.019039700Z",
-     "start_time": "2024-09-03T12:08:27.887044Z"
+     "end_time": "2024-09-10T09:39:26.706670500Z",
+     "start_time": "2024-09-10T09:39:25.387956400Z"
     }
    }
   },
@@ -263,21 +263,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:29.464867100Z",
-     "start_time": "2024-09-03T12:08:29.006953500Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:29.613524200Z",
-     "start_time": "2024-09-03T12:08:29.461864500Z"
+     "end_time": "2024-09-10T09:39:27.083371200Z",
+     "start_time": "2024-09-10T09:39:26.707790200Z"
     }
    }
   },
@@ -331,8 +318,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:29.706118700Z",
-     "start_time": "2024-09-03T12:08:29.483866300Z"
+     "end_time": "2024-09-10T09:39:27.171536400Z",
+     "start_time": "2024-09-10T09:39:27.087735400Z"
     }
    }
   },
@@ -342,7 +329,7 @@
     "# Go to the SparkUI in the tab SQL/Dataframe\n",
     "1. Search for the query plans in the SparkUI SQL tab.\n",
     "2. Try to understand the excution plan.\n",
-    "3. Go to https://medium.com/towards-data-science/mastering-query-plans-in-spark-3-0-f4c334663aa4 to get some insights in the operators of the plan. [Medium has a membership model. You can read 3 articles for free]"
+    "3. Go to https://dzone.com/articles/debugging-spark-performance-using-explain-plan to get some insights in the operators of the plan. "
    ],
    "metadata": {
     "collapsed": false
@@ -410,8 +397,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:31.083938100Z",
-     "start_time": "2024-09-03T12:08:29.590966300Z"
+     "end_time": "2024-09-10T09:39:29.492853600Z",
+     "start_time": "2024-09-10T09:39:27.171536400Z"
     }
    }
   },
@@ -442,7 +429,6 @@
       "|2018|                    6000|\n",
       "|2023|                    5200|\n",
       "+----+------------------------+\n",
-      "\n",
       "== Parsed Logical Plan ==\n",
       "'Aggregate ['year('hire_date)], [unresolvedalias('year('hire_date), None), 'sum('salary) AS total_salary_expenditure#153]\n",
       "+- 'UnresolvedRelation [tbl_employees], [], false\n",
@@ -478,8 +464,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:31.966872Z",
-     "start_time": "2024-09-03T12:08:31.039937400Z"
+     "end_time": "2024-09-10T09:39:31.922418800Z",
+     "start_time": "2024-09-10T09:39:28.163419100Z"
     }
    }
   },
@@ -564,8 +550,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:33.438295700Z",
-     "start_time": "2024-09-03T12:08:31.926892200Z"
+     "end_time": "2024-09-10T09:39:35.136079900Z",
+     "start_time": "2024-09-10T09:39:31.763226Z"
     }
    }
   },
@@ -588,10 +574,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:52.015982Z",
-     "start_time": "2024-09-03T12:08:33.429296Z"
+     "end_time": "2024-09-10T09:39:52.915732500Z",
+     "start_time": "2024-09-10T09:39:35.068066600Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-10T09:40:02.008062900Z",
+     "start_time": "2024-09-10T09:40:01.188513600Z"
+    }
+   },
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -613,8 +614,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T12:08:52.051694500Z",
-     "start_time": "2024-09-03T12:08:52.018816200Z"
+     "end_time": "2024-09-10T09:39:52.944995500Z",
+     "start_time": "2024-09-10T09:39:52.920174800Z"
     }
    }
   }
