--- a/04_00_CHECK_jdbcConnection.ipynb
+++ b/04_00_CHECK_jdbcConnection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:47:40.128021200Z",
-     "start_time": "2024-09-03T10:47:39.821307600Z"
+     "end_time": "2024-09-10T09:40:50.984376Z",
+     "start_time": "2024-09-10T09:40:50.273974700Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:47:40.211438500Z",
-     "start_time": "2024-09-03T10:47:40.130850600Z"
+     "end_time": "2024-09-10T09:40:51.073406900Z",
+     "start_time": "2024-09-10T09:40:50.988750700Z"
     }
    }
   },
@@ -68,8 +68,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x28222eac950>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x2bd5133e0d0>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 3,
      "metadata": {},
@@ -97,8 +97,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:47:58.455423100Z",
-     "start_time": "2024-09-03T10:47:45.780305Z"
+     "end_time": "2024-09-10T09:41:38.013301700Z",
+     "start_time": "2024-09-10T09:40:51.046383Z"
     }
    }
   },
@@ -1134,7 +1134,7 @@
     }
    ],
    "source": [
-    "cc.set_connection(\"tutorial_op\")\n",
+    "cc.set_connectionProfile(\"tutorial_op\")\n",
     "print(cc.create_jdbc())\n",
     "sales_df = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
@@ -1153,23 +1153,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:32:24.546994900Z",
-     "start_time": "2024-09-03T10:32:18.182897300Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "spark.stop()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-03T10:49:52.641165400Z",
-     "start_time": "2024-09-03T10:49:51.838251700Z"
+     "end_time": "2024-09-10T09:42:04.062276300Z",
+     "start_time": "2024-09-10T09:41:52.906329400Z"
     }
    }
   },
@@ -1177,11 +1162,13 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "spark.stop()"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-09-03T09:45:51.380163700Z"
+     "start_time": "2024-09-10T09:41:39.607390800Z"
     }
    }
   }
