--- a/05_4_DWH_factSales.ipynb
+++ b/05_4_DWH_factSales.ipynb
@@ -22,8 +22,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:23:08.162058500Z",
-     "start_time": "2024-09-03T11:23:07.890180600Z"
+     "end_time": "2024-09-10T09:48:23.770156700Z",
+     "start_time": "2024-09-10T09:48:23.399513500Z"
     }
    }
   },
@@ -33,8 +33,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x2587fbbda60>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>factSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x1569d6eb890>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>factSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 2,
      "metadata": {},
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:23:26.409772400Z",
-     "start_time": "2024-09-03T11:23:09.806014800Z"
+     "end_time": "2024-09-10T09:48:41.898277200Z",
+     "start_time": "2024-09-10T09:48:23.771271400Z"
     }
    }
   },
@@ -91,7 +91,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "cc.set_connection(\"default\")\n",
+    "cc.set_connectionProfile(\"default\")\n",
     "sale_src_df = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
@@ -111,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:23:46.978474Z",
-     "start_time": "2024-09-03T11:23:43.710406300Z"
+     "end_time": "2024-09-10T09:48:43.775863700Z",
+     "start_time": "2024-09-10T09:48:41.876819900Z"
     }
    }
   },
@@ -139,8 +139,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:31:14.390811300Z",
-     "start_time": "2024-09-03T11:31:07.735868800Z"
+     "end_time": "2024-09-10T09:48:52.001060300Z",
+     "start_time": "2024-09-10T09:48:43.778161700Z"
     }
    }
   },
@@ -169,17 +169,19 @@
       "+-------+------+--------------------+--------+----------+--------------------+\n",
       "|OrderID|dateSK|          salesrepSK|count_mv|revenue_mv|                 md5|\n",
       "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "|      1|   650|e29017f3-ee76-462...|       1| 851804379|6e8de602838d31192...|\n",
-      "|      2|  1369|e29017f3-ee76-462...|       1| 683057055|48ec86cac5a62d038...|\n",
-      "|      3|   920|e29017f3-ee76-462...|       1|1732115679|de3629828fb3a84b6...|\n",
-      "|      4|   604|e29017f3-ee76-462...|       1|1275042249|1eab0e382551878fa...|\n",
-      "|      5|   897|e29017f3-ee76-462...|       1| 694153767|2dd11e3404f663f9a...|\n",
-      "|      6|   812|e29017f3-ee76-462...|       1|1959464599|d25ac79b971382a47...|\n",
-      "|      7|   421|e29017f3-ee76-462...|       1|1170677605|61d43c8ee34339b4b...|\n",
-      "|      8|   691|e29017f3-ee76-462...|       1|1588502393|329cb83447f61cdcb...|\n",
-      "|      9|  1254|e29017f3-ee76-462...|       1|1173163372|76f9615aff1703787...|\n",
-      "|     10|  1311|e29017f3-ee76-462...|       1| 788682390|c6ef1d370564d4eeb...|\n",
-      "+-------+------+--------------------+--------+----------+--------------------+\n"
+      "|      1|   650|b65df3d9-20dc-42d...|       1| 851804379|a237b06f2932af7dd...|\n",
+      "|      2|  1369|b65df3d9-20dc-42d...|       1| 683057055|f2f29b4c68d66f8a6...|\n",
+      "|      3|   920|b65df3d9-20dc-42d...|       1|1732115679|ce49bc85950b1de43...|\n",
+      "|      4|   604|b65df3d9-20dc-42d...|       1|1275042249|908be3f822ea3717d...|\n",
+      "|      5|   897|b65df3d9-20dc-42d...|       1| 694153767|fddeb9cfa84ec3a43...|\n",
+      "|      6|   812|b65df3d9-20dc-42d...|       1|1959464599|4c7a00e21fb76c7d8...|\n",
+      "|      7|   421|b65df3d9-20dc-42d...|       1|1170677605|31eb59a94c0a895e2...|\n",
+      "|      8|   691|b65df3d9-20dc-42d...|       1|1588502393|a30a88ea5f72f4df0...|\n",
+      "|      9|  1254|b65df3d9-20dc-42d...|       1|1173163372|01aeb05aafe965913...|\n",
+      "|     10|  1311|b65df3d9-20dc-42d...|       1| 788682390|b0f5e545ae3941ff0...|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
      ]
     }
    ],
@@ -199,8 +201,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:32:08.931083Z",
-     "start_time": "2024-09-03T11:31:56.061151600Z"
+     "end_time": "2024-09-10T09:49:10.184840500Z",
+     "start_time": "2024-09-10T09:48:52.004507500Z"
     }
    }
   },
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "\n",
@@ -227,8 +229,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:33:05.367829800Z",
-     "start_time": "2024-09-03T11:32:55.948419500Z"
+     "end_time": "2024-09-10T09:49:24.830124800Z",
+     "start_time": "2024-09-10T09:49:10.188063700Z"
     }
    }
   },
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -254,8 +256,9 @@
       "+-----------------+----------------+----------------+-----------------+\n",
       "|num_affected_rows|num_updated_rows|num_deleted_rows|num_inserted_rows|\n",
       "+-----------------+----------------+----------------+-----------------+\n",
-      "|                1|               0|               0|                1|\n",
-      "+-----------------+----------------+----------------+-----------------+\n"
+      "|                0|               0|               0|                0|\n",
+      "+-----------------+----------------+----------------+-----------------+\n",
+      "\n"
      ]
     }
    ],
@@ -274,27 +277,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T14:55:14.894114Z",
-     "end_time": "2023-09-20T14:55:23.525288Z"
+     "end_time": "2024-09-10T09:49:36.248336800Z",
+     "start_time": "2024-09-10T09:49:24.834540600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [
     {
-     "ename": "AnalysisException",
-     "evalue": "[TABLE_OR_VIEW_NOT_FOUND] The table or view `factsales` cannot be found. Verify the spelling and correctness of the schema and catalog.\nIf you did not qualify the name with a schema, verify the current_schema() output, or qualify the name with the correct schema and catalog.\nTo tolerate the error on drop use DROP VIEW IF EXISTS or DROP TABLE IF EXISTS.; line 1 pos 21;\n'Aggregate [unresolvedalias(count(1), None)]\n+- 'UnresolvedRelation [factsales], [], false\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAnalysisException\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[6], line 4\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# IMPORTANT: ALWAYS TEST THE CREATED CODE.\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# In this example I changed order 498 in the operational database and checked the change after the run.\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# spark.sql(\"select * from factsales f join dimsalesrep ds on f.salesrepSK = ds.salesrepSK where OrderID = 192  \").show()\u001B[39;00m\n\u001B[1;32m----> 4\u001B[0m \u001B[43mspark\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msql\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mselect count(*) from factsales\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mshow()\n\u001B[0;32m      5\u001B[0m spark\u001B[38;5;241m.\u001B[39msql(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mselect * from factsales where orderId=1\u001B[39m\u001B[38;5;124m\"\u001B[39m)\u001B[38;5;241m.\u001B[39mshow()\n",
-      "File \u001B[1;32mC:\\DevApps\\Python312PysparkENV\\Lib\\site-packages\\pyspark\\sql\\session.py:1631\u001B[0m, in \u001B[0;36mSparkSession.sql\u001B[1;34m(self, sqlQuery, args, **kwargs)\u001B[0m\n\u001B[0;32m   1627\u001B[0m         \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_jvm \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m   1628\u001B[0m         litArgs \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_jvm\u001B[38;5;241m.\u001B[39mPythonUtils\u001B[38;5;241m.\u001B[39mtoArray(\n\u001B[0;32m   1629\u001B[0m             [_to_java_column(lit(v)) \u001B[38;5;28;01mfor\u001B[39;00m v \u001B[38;5;129;01min\u001B[39;00m (args \u001B[38;5;129;01mor\u001B[39;00m [])]\n\u001B[0;32m   1630\u001B[0m         )\n\u001B[1;32m-> 1631\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m DataFrame(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_jsparkSession\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msql\u001B[49m\u001B[43m(\u001B[49m\u001B[43msqlQuery\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlitArgs\u001B[49m\u001B[43m)\u001B[49m, \u001B[38;5;28mself\u001B[39m)\n\u001B[0;32m   1632\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[0;32m   1633\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(kwargs) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
-      "File \u001B[1;32mC:\\DevApps\\Python312PysparkENV\\Lib\\site-packages\\py4j\\java_gateway.py:1322\u001B[0m, in \u001B[0;36mJavaMember.__call__\u001B[1;34m(self, *args)\u001B[0m\n\u001B[0;32m   1316\u001B[0m command \u001B[38;5;241m=\u001B[39m proto\u001B[38;5;241m.\u001B[39mCALL_COMMAND_NAME \u001B[38;5;241m+\u001B[39m\\\n\u001B[0;32m   1317\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcommand_header \u001B[38;5;241m+\u001B[39m\\\n\u001B[0;32m   1318\u001B[0m     args_command \u001B[38;5;241m+\u001B[39m\\\n\u001B[0;32m   1319\u001B[0m     proto\u001B[38;5;241m.\u001B[39mEND_COMMAND_PART\n\u001B[0;32m   1321\u001B[0m answer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mgateway_client\u001B[38;5;241m.\u001B[39msend_command(command)\n\u001B[1;32m-> 1322\u001B[0m return_value \u001B[38;5;241m=\u001B[39m \u001B[43mget_return_value\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m   1323\u001B[0m \u001B[43m    \u001B[49m\u001B[43manswer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgateway_client\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtarget_id\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1325\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m temp_arg \u001B[38;5;129;01min\u001B[39;00m temp_args:\n\u001B[0;32m   1326\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mhasattr\u001B[39m(temp_arg, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m_detach\u001B[39m\u001B[38;5;124m\"\u001B[39m):\n",
-      "File \u001B[1;32mC:\\DevApps\\Python312PysparkENV\\Lib\\site-packages\\pyspark\\errors\\exceptions\\captured.py:185\u001B[0m, in \u001B[0;36mcapture_sql_exception.<locals>.deco\u001B[1;34m(*a, **kw)\u001B[0m\n\u001B[0;32m    181\u001B[0m converted \u001B[38;5;241m=\u001B[39m convert_exception(e\u001B[38;5;241m.\u001B[39mjava_exception)\n\u001B[0;32m    182\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(converted, UnknownException):\n\u001B[0;32m    183\u001B[0m     \u001B[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001B[39;00m\n\u001B[0;32m    184\u001B[0m     \u001B[38;5;66;03m# JVM exception message.\u001B[39;00m\n\u001B[1;32m--> 185\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m converted \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m    186\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    187\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m\n",
-      "\u001B[1;31mAnalysisException\u001B[0m: [TABLE_OR_VIEW_NOT_FOUND] The table or view `factsales` cannot be found. Verify the spelling and correctness of the schema and catalog.\nIf you did not qualify the name with a schema, verify the current_schema() output, or qualify the name with the correct schema and catalog.\nTo tolerate the error on drop use DROP VIEW IF EXISTS or DROP TABLE IF EXISTS.; line 1 pos 21;\n'Aggregate [unresolvedalias(count(1), None)]\n+- 'UnresolvedRelation [factsales], [], false\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|count(1)|\n",
+      "+--------+\n",
+      "|     999|\n",
+      "+--------+\n",
+      "\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "|OrderID|dateSK|          salesrepSK|count_mv|revenue_mv|                 md5|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "|      1|   650|b65df3d9-20dc-42d...|       1| 851804379|a237b06f2932af7dd...|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "\n"
      ]
     }
    ],
@@ -309,8 +316,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T11:32:36.554991400Z",
-     "start_time": "2024-09-03T11:32:36.264040100Z"
+     "end_time": "2024-09-10T09:49:41.411568200Z",
+     "start_time": "2024-09-10T09:49:36.262239400Z"
     }
    }
   },
@@ -325,15 +332,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fact' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[9], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# The history information is derived from the delta table log files. They contain a lot of information of all the actions performed on the table. In this case it tells us something about de merge operations. You can find statistics about the update and insert counts in the document.\u001B[39;00m\n\u001B[1;32m----> 3\u001B[0m \u001B[43mfact\u001B[49m\u001B[38;5;241m.\u001B[39mhistory()\u001B[38;5;241m.\u001B[39mshow(\u001B[38;5;241m10\u001B[39m,\u001B[38;5;28;01mFalse\u001B[39;00m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'fact' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# The history information is derived from the delta table log files. They contain a lot of information of all the actions performed on the table. In this case it tells us something about de merge operations. You can find statistics about the update and insert counts in the document.\n",
     "\n",
     "fact.history().show(10,False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-10T09:49:42.067046800Z",
+     "start_time": "2024-09-10T09:49:41.415008600Z"
+    }
    }
   },
   {
@@ -344,7 +367,11 @@
     "spark.stop()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-10T09:49:42.073806900Z",
+     "start_time": "2024-09-10T09:49:42.071545700Z"
+    }
    }
   }
  ],
