--- a/00_0_CHECK_1_install.ipynb
+++ b/00_0_CHECK_1_install.ipynb
@@ -22,8 +22,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:21:56.814455600Z",
-     "start_time": "2024-09-03T07:21:56.271264100Z"
+     "end_time": "2024-09-10T09:33:05.236029Z",
+     "start_time": "2024-09-10T09:33:04.472434Z"
     }
    },
    "outputs": [],
@@ -59,15 +59,13 @@
       "COMPUTERNAME: AKDGPORT11191\n",
       "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
       "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
-      "EFC_18860: 0\n",
+      "EFC_11424: 0\n",
+      "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
+      "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
       "HOMEDRIVE: C:\n",
       "HOMEPATH: \\Users\\overvelj\n",
       "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
-      "IPY_INTERRUPT_EVENT: 1484\n",
       "JAVA_HOME: C:\\Program Files\\Java\\jdk-11\\\n",
-      "JPY_INTERRUPT_EVENT: 1484\n",
-      "JPY_PARENT_PID: 1412\n",
-      "JPY_SESSION_NAME: 00_0_CHECK_1_install.ipynb\n",
       "LANG: en_US.UTF-8\n",
       "LANGUAGE: \n",
       "LC_ALL: en_US.UTF-8\n",
@@ -77,7 +75,7 @@
       "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "OS: Windows_NT\n",
-      "PATH: C:\\DevApps\\Python312PysparkENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
+      "PATH: C:\\DevApps\\311SparkVENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
       "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
       "PROCESSOR_ARCHITECTURE: AMD64\n",
       "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
@@ -87,7 +85,7 @@
       "PROGRAMFILES: C:\\Program Files\n",
       "PROGRAMFILES(X86): C:\\Program Files (x86)\n",
       "PROGRAMW6432: C:\\Program Files\n",
-      "PROMPT: (Python312PysparkENV) $P$G\n",
+      "PROMPT: (311SparkVENV) $P$G\n",
       "PSDISTRICT_BOOTIMAGEVERSION: CCM002C6\n",
       "PSDISTRICT_DEPLOYMENTID: CCM00B0B\n",
       "PSDISTRICT_INSTALLATIONDATE: 20200814-15:15:29\n",
@@ -113,11 +111,15 @@
       "USERDOMAIN_ROAMINGPROFILE: ADMIN\n",
       "USERNAME: overvelj\n",
       "USERPROFILE: C:\\Users\\overvelj\n",
-      "VIRTUAL_ENV: C:\\DevApps\\Python312PysparkENV\n",
+      "VIRTUAL_ENV: C:\\DevApps\\311SparkVENV\n",
       "WINDIR: C:\\WINDOWS\n",
       "ZES_ENABLE_SYSMAN: 1\n",
-      "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;\n",
       "_OLD_VIRTUAL_PROMPT: $P$G\n",
+      "JPY_SESSION_NAME: 00_0_CHECK_1_install.ipynb\n",
+      "JPY_INTERRUPT_EVENT: 1792\n",
+      "IPY_INTERRUPT_EVENT: 1792\n",
+      "JPY_PARENT_PID: 1744\n",
       "PYDEVD_USE_FRAME_EVAL: NO\n",
       "TERM: xterm-color\n",
       "CLICOLOR: 1\n",
@@ -131,18 +133,6 @@
       "HADOOP_HOME: C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\n",
       "PYSPARK_HADOOP_VERSION: 3\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\DevProjects\\Databricks\\ConnectionConfig.py:8: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  spark_home = \"C:\\DevApps\\\\bigdatatools\\spark-3.5.2-bin-hadoop3\" # Change to own hadoop-folder. Use double slashes when needed. You can also use os.sep instead of the double slaches.\n",
-      "C:\\DevProjects\\Databricks\\ConnectionConfig.py:9: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  hadoop_home = \"C:\\DevApps\\\\bigdatatools\\hadoop-3.4.0-win10-x64\" # For windows: use the hadoop folder in bigdatatools. For linux/mac: Try with provided hadoop folder in bigdatatools, if that doesn't work, download hadoop from the apache website: https://hadoop.apache.org/release/3.4.0.html\n",
-      "C:\\DevProjects\\Databricks\\ConnectionConfig.py:10: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "  java_home = \"C:\\Program Files\\Java\\jdk-11\"\n"
-     ]
     }
    ],
    "source": [
@@ -153,8 +143,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:21:59.953419600Z",
-     "start_time": "2024-09-03T07:21:59.881969800Z"
+     "end_time": "2024-09-10T09:33:05.380747800Z",
+     "start_time": "2024-09-10T09:33:05.212618900Z"
     }
    }
   },
@@ -188,8 +178,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:22:05.958526400Z",
-     "start_time": "2024-09-03T07:22:05.857961700Z"
+     "end_time": "2024-09-10T09:33:05.491752600Z",
+     "start_time": "2024-09-10T09:33:05.256654Z"
     }
    }
   },
@@ -222,8 +212,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:22:26.647563100Z",
-     "start_time": "2024-09-03T07:22:13.880839200Z"
+     "end_time": "2024-09-10T09:33:30.769003200Z",
+     "start_time": "2024-09-10T09:33:05.337106400Z"
     }
    }
   },
@@ -232,7 +222,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x19ab73fc1d0>",
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x25125c9c450>",
       "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>InstallCheck</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 5,
@@ -247,8 +237,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:22:37.848010500Z",
-     "start_time": "2024-09-03T07:22:35.817066100Z"
+     "end_time": "2024-09-10T09:33:32.724792600Z",
+     "start_time": "2024-09-10T09:33:30.772267500Z"
     }
    },
    "execution_count": 5
@@ -322,8 +312,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:23:06.784226Z",
-     "start_time": "2024-09-03T07:22:59.764053Z"
+     "end_time": "2024-09-10T09:33:39.879496800Z",
+     "start_time": "2024-09-10T09:33:32.705489Z"
     }
    }
   },
@@ -382,8 +372,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:23:19.512599600Z",
-     "start_time": "2024-09-03T07:23:15.541381400Z"
+     "end_time": "2024-09-10T09:33:44.497206Z",
+     "start_time": "2024-09-10T09:33:39.786037800Z"
     }
    }
   },
@@ -405,13 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "DataFrame[summary: string, word: string, amount: string]"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,14 +419,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T07:24:45.401237Z",
-     "start_time": "2024-09-03T07:24:42.128024400Z"
+     "end_time": "2024-09-10T09:34:05.835252900Z",
+     "start_time": "2024-09-10T09:33:44.469395900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-10T09:34:33.070662300Z",
+     "start_time": "2024-09-10T09:34:32.122312Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
