--- a/05_1_DWH_dimDate.ipynb
+++ b/05_1_DWH_dimDate.ipynb
@@ -12,20 +12,11 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T09:34:47.610467100Z",
-     "start_time": "2024-09-03T09:34:46.693004800Z"
+     "end_time": "2024-09-10T09:43:22.564001100Z",
+     "start_time": "2024-09-10T09:43:22.033738200Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\DevProjects\\Databricks\\ConnectionConfig.py:10: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "  java_home = \"C:\\Program Files\\Java\\\\jdk-11\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from pyspark.sql import SparkSession\n",
@@ -49,22 +40,15 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T09:35:16.031680800Z",
-     "start_time": "2024-09-03T09:34:49.138425700Z"
+     "end_time": "2024-09-10T09:43:46.313580800Z",
+     "start_time": "2024-09-10T09:43:22.568696200Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyspark.sql.session.SparkSession object at 0x000001FE590ADC40>\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x1fe590adc40>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DIM_DATE</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x246c0d9fdd0>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4042\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DIM_DATE</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 2,
      "metadata": {},
@@ -92,8 +76,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T09:35:30.455217100Z",
-     "start_time": "2024-09-03T09:35:24.185510700Z"
+     "end_time": "2024-09-10T09:43:53.772712100Z",
+     "start_time": "2024-09-10T09:43:46.304713900Z"
     }
    },
    "outputs": [
@@ -179,8 +163,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T09:35:38.428526100Z",
-     "start_time": "2024-09-03T09:35:37.444288100Z"
+     "end_time": "2024-09-10T09:43:55.426099Z",
+     "start_time": "2024-09-10T09:43:53.749254500Z"
     }
    },
    "outputs": [
@@ -270,8 +254,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T09:35:46.142017600Z",
-     "start_time": "2024-09-03T09:35:45.703527700Z"
+     "end_time": "2024-09-10T09:43:56.076849400Z",
+     "start_time": "2024-09-10T09:43:55.434863300Z"
     }
    },
    "outputs": [
@@ -340,8 +324,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T09:35:58.196353600Z",
-     "start_time": "2024-09-03T09:35:50.593795800Z"
+     "end_time": "2024-09-10T09:44:14.542094Z",
+     "start_time": "2024-09-10T09:43:56.060408800Z"
     }
    },
    "outputs": [],
@@ -354,8 +338,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:36:18.273660Z",
-     "end_time": "2023-09-20T08:36:20.358666Z"
+     "end_time": "2024-09-10T09:44:15.370291500Z",
+     "start_time": "2024-09-10T09:44:14.547115700Z"
     }
    },
    "outputs": [],
@@ -365,11 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-10T09:44:15.406348200Z",
+     "start_time": "2024-09-10T09:44:15.371818100Z"
+    }
    }
   }
  ],
