--- a/05_2_DWH_dimSalesRep_Initial.ipynb
+++ b/05_2_DWH_dimSalesRep_Initial.ipynb
@@ -25,27 +25,23 @@
       "COMPUTERNAME: AKDGPORT11191\n",
       "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
       "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
-      "EFC_10528: 0\n",
+      "EFC_11424: 0\n",
       "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
       "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
       "HOMEDRIVE: C:\n",
       "HOMEPATH: \\Users\\overvelj\n",
       "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
-      "IPY_INTERRUPT_EVENT: 1928\n",
       "JAVA_HOME: C:\\Program Files\\Java\\jdk-11\\\n",
-      "JPY_INTERRUPT_EVENT: 1928\n",
-      "JPY_PARENT_PID: 1916\n",
-      "JPY_SESSION_NAME: 05_2_DWH_dimSalesRep_Initial.ipynb\n",
       "LANG: en_US.UTF-8\n",
       "LANGUAGE: \n",
       "LC_ALL: en_US.UTF-8\n",
       "LOCALAPPDATA: C:\\Users\\overvelj\\AppData\\Local\n",
-      "LOGONSERVER: \\\\CDCDCADM01\n",
+      "LOGONSERVER: \\\\CDCDCADM02\n",
       "NUMBER_OF_PROCESSORS: 8\n",
       "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "OS: Windows_NT\n",
-      "PATH: C:\\DevApps\\Python312PysparkENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
+      "PATH: C:\\DevApps\\311SparkVENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
       "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
       "PROCESSOR_ARCHITECTURE: AMD64\n",
       "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
@@ -55,7 +51,7 @@
       "PROGRAMFILES: C:\\Program Files\n",
       "PROGRAMFILES(X86): C:\\Program Files (x86)\n",
       "PROGRAMW6432: C:\\Program Files\n",
-      "PROMPT: (Python312PysparkENV) $P$G\n",
+      "PROMPT: (311SparkVENV) $P$G\n",
       "PSDISTRICT_BOOTIMAGEVERSION: CCM002C6\n",
       "PSDISTRICT_DEPLOYMENTID: CCM00B0B\n",
       "PSDISTRICT_INSTALLATIONDATE: 20200814-15:15:29\n",
@@ -81,11 +77,15 @@
       "USERDOMAIN_ROAMINGPROFILE: ADMIN\n",
       "USERNAME: overvelj\n",
       "USERPROFILE: C:\\Users\\overvelj\n",
-      "VIRTUAL_ENV: C:\\DevApps\\Python312PysparkENV\n",
+      "VIRTUAL_ENV: C:\\DevApps\\311SparkVENV\n",
       "WINDIR: C:\\WINDOWS\n",
       "ZES_ENABLE_SYSMAN: 1\n",
       "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;\n",
       "_OLD_VIRTUAL_PROMPT: $P$G\n",
+      "JPY_SESSION_NAME: 05_2_DWH_dimSalesRep_Initial.ipynb\n",
+      "JPY_INTERRUPT_EVENT: 2688\n",
+      "IPY_INTERRUPT_EVENT: 2688\n",
+      "JPY_PARENT_PID: 2692\n",
       "PYDEVD_USE_FRAME_EVAL: NO\n",
       "TERM: xterm-color\n",
       "CLICOLOR: 1\n",
@@ -113,21 +113,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:51:38.865144500Z",
-     "start_time": "2024-09-03T10:51:38.612160400Z"
+     "end_time": "2024-09-10T09:44:44.357198600Z",
+     "start_time": "2024-09-10T09:44:43.980490200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x21c377ae8d0>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesRepInit</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x15c5a1d0350>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4042\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesRepInit</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +139,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:52:17.680350600Z",
-     "start_time": "2024-09-03T10:52:14.249662500Z"
+     "end_time": "2024-09-10T09:45:16.221312200Z",
+     "start_time": "2024-09-10T09:44:44.338950300Z"
     }
    }
   },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -187,25 +187,25 @@
       "+--------------------+----------+-------------+-------------+-------------------+-------------------+--------------------+-------+\n",
       "|          salesRepSK|salesrepid|         name|       office|          scd_start|            scd_end|                 md5|current|\n",
       "+--------------------+----------+-------------+-------------+-------------------+-------------------+--------------------+-------+\n",
-      "|e29017f3-ee76-462...|         1|      R. Zane|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|1f8cbbc272a33dcc1...|   true|\n",
-      "|e8dfac53-cfdb-436...|         2|   P. Chapman|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|14b094c31bf9e4149...|   true|\n",
-      "|cc52e5ac-765e-457...|         3|     F. Crane|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|0715f05df18a3a794...|   true|\n",
-      "|e7b68ade-1c92-4e8...|         4|    R. Geller|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|6212c0ce01f144d66...|   true|\n",
-      "|d3858661-67e5-4fb...|         5|     T. Mosby|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|947579dec8084039e...|   true|\n",
-      "|3ad7fdb8-02a2-467...|         6|   H. Simpson|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|d636d1b0685650b34...|   true|\n",
-      "|5880490b-03a6-4c3...|         7|   B. Stinson|San Fransisco|1999-01-01 00:00:00|2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
-      "|b7c5e413-413e-421...|         8|L. Hofstadter|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
-      "|e28d311d-c5d3-412...|         9|    S. Cooper|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
-      "|76e8eb70-4124-41d...|        10| F. Underwood|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
-      "|b86a98c1-b1a1-447...|        11|     W. White|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
-      "|d8c23730-aa18-44b...|        12| T. Lannister|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
-      "|1d1ba85a-a7ea-40c...|        13|      M. Ross|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|d0faf94c1bbe2d4a7...|   true|\n",
+      "|b65df3d9-20dc-42d...|         1|      R. Zane|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|1f8cbbc272a33dcc1...|   true|\n",
+      "|ec9c8bb4-e949-413...|         2|   P. Chapman|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|14b094c31bf9e4149...|   true|\n",
+      "|957c6759-6c7b-4f3...|         4|    R. Geller|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|6212c0ce01f144d66...|   true|\n",
+      "|51ec08d2-9b42-447...|         3|     F. Crane|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|382ec0d8b8cd28ce4...|   true|\n",
+      "|cd1beed9-a843-4f8...|         5|     T. Mosby|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|947579dec8084039e...|   true|\n",
+      "|6b5219a8-2533-4e6...|         6|   H. Simpson|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|d636d1b0685650b34...|   true|\n",
+      "|89afbf6b-2123-485...|         7|   B. Stinson|San Fransisco|1999-01-01 00:00:00|2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
+      "|634a1491-0fd5-4fb...|         8|L. Hofstadter|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
+      "|7de6c74b-f37e-4e9...|         9|    S. Cooper|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
+      "|751782da-b175-450...|        10| F. Underwood|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
+      "|579329fb-52f0-4b1...|        11|     W. White|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
+      "|9c488723-3bc3-422...|        12| T. Lannister|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
+      "|ddb5d0fc-0261-47c...|        13|      M. Ross|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|d0faf94c1bbe2d4a7...|   true|\n",
       "+--------------------+----------+-------------+-------------+-------------------+-------------------+--------------------+-------+\n"
      ]
     }
    ],
    "source": [
-    "cc.set_connection(\"tutorial_op\")\n",
+    "cc.set_connectionProfile(\"tutorial_op\")\n",
     "\n",
     "df_operational_sales_rep = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
@@ -240,8 +240,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:52:53.635885Z",
-     "start_time": "2024-09-03T10:52:39.699565200Z"
+     "end_time": "2024-09-10T09:45:38.860954600Z",
+     "start_time": "2024-09-10T09:45:16.204296600Z"
     }
    }
   },
@@ -266,41 +266,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'spark' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mspark\u001B[49m\u001B[38;5;241m.\u001B[39mstop()\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'spark' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "outputs": [],
    "source": [
     "spark.stop()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-03T10:37:49.915529900Z",
-     "start_time": "2024-09-03T10:37:49.860599500Z"
+     "end_time": "2024-09-10T09:45:39.290925200Z",
+     "start_time": "2024-09-10T09:45:38.865320700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-25T10:09:05.291152Z",
-     "end_time": "2023-09-25T10:09:05.291152Z"
+     "end_time": "2024-09-10T09:45:39.318321Z",
+     "start_time": "2024-09-10T09:45:39.298552300Z"
     }
    }
   }
