--- a/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
+++ b/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
@@ -100,8 +100,8 @@
     "#wordCounts.cache()\n",
     "letterCounts = wordCounts.map(lambda wordTuple: (wordTuple[0][0],wordTuple[1]) )\n",
     "letterCounts = letterCounts.reduceByKey(lambda a,b:a +b)\n",
-    "print(wordCounts.saveAsTextFile(\"./output/words\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\")))\n",
-    "print(letterCounts.saveAsTextFile(\"./output/letters\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\")))\n"
+    "wordCounts.saveAsTextFile(\"./output/words\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\"))\n",
+    "letterCounts.saveAsTextFile(\"./output/letters\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\"))\n"
    ],
    "metadata": {
     "collapsed": false,
