--- a/05_2_DWH_dimSalesRep_Initial.ipynb
+++ b/05_2_DWH_dimSalesRep_Initial.ipynb
@@ -147,6 +147,16 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Creating the operational database\n",
+    "In order to run this demo you have to create a tutorial_op database and run the PostgreSQL_SalesOperational.sql script.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Initial load\n",
     "We will create a slowly changing dimension type 2 called dimSalesRep based on a sourceTable in our operational database called dbo.salesrep. SCD2  tables demand extra care and  because we will store hirstorical values of the dimension with the help of ranges.\n",
     "This notebook will create the table and fill it with the initial data. A second notebook will be used for increments of new and changed data.\n",
