--- a/04_00_CHECK_jdbcConnection.ipynb
+++ b/04_00_CHECK_jdbcConnection.ipynb
@@ -49,29 +49,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1148833947.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  Cell \u001B[1;32mIn[1], line 2\u001B[1;36m\u001B[0m\n\u001B[1;33m    In order to run this demo you have to create a tutorial_op database and run the PostgreSQL_SalesOperational.sql script.\u001B[0m\n\u001B[1;37m       ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
     "# Creating the operational database\n",
     "In order to run this demo you have to create a tutorial_op database and run the PostgreSQL_SalesOperational.sql script."
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-16T10:57:41.061089800Z",
-     "start_time": "2024-09-16T10:57:41.021368300Z"
-    }
-   },
-   "execution_count": 1
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
